dataset1235/2025-2/610742602/users/59982477/executions/677928262_4233865845.log
== SUBMISSION (2025-08-27 15:36:38)
-- CODE: 
# Programa que converte Celsius em Fahrenheit
#Lendo a temperatura em Celsius
celsius = float(input("Digite a temperatura em Celsius: "))
#Convertendo para fahrenheit 
fahrenheit = (celcius * 9/5) + 32
#Imprimindo o resuktadi arredondado para 2 casas decimais 
print("Temperatura em Fahrenheit:", round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:36:41)
-- CODE: 
# Programa que converte Celsius em Fahrenheit
#Lendo a temperatura em Celsius
celsius = float(input("Digite a temperatura em Celsius: "))
#Convertendo para fahrenheit 
fahrenheit = (celcius * 9/5) + 32
#Imprimindo o resuktadi arredondado para 2 casas decimais 
print("Temperatura em Fahrenheit:", round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:37:50)
-- CODE: 
# Programa que converte Celsius em Fahrenheit
#Lendo a temperatura em Celsius
celsius = float(input("Digite a temperatura em Celsius: "))
#Convertendo para fahrenheit 
fahrenheit = (celsius * 9/5) + 32
#Imprimindo o resuktadi arredondado para 2 casas decimais 
print("Temperatura em Fahrenheit:", round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite a temperatura em Celsius: Temperatura em Fahrenheit: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite a temperatura em Celsius: Temperatura em Fahrenheit: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite a temperatura em Celsius: Temperatura em Fahrenheit: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite a temperatura em Celsius: Temperatura em Fahrenheit: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite a temperatura em Celsius: Temperatura em Fahrenheit: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite a temperatura em Celsius: Temperatura em Fahrenheit: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:35:30)
-- CODE: 
# Programa que converte Celsius em Fahrenheit
#Lendo a temperatura em Celsius
celsius = float(input("Digite a temperatura em Celsius: "))
#Convertendo para fahrenheit 
fahrenheit = (celcius * 9/5) + 32
#Imprimindo o resuktadi arredondado para 2 casas decimais 
print("Temperatura em Fahrenheit:", round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:36:38)
-- CODE: 
# Programa que converte Celsius em Fahrenheit
#Lendo a temperatura em Celsius
celsius = float(input("Digite a temperatura em Celsius: "))
#Convertendo para fahrenheit 
fahrenheit = (celcius * 9/5) + 32
#Imprimindo o resuktadi arredondado para 2 casas decimais 
print("Temperatura em Fahrenheit:", round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:36:39)
-- CODE: 
# Programa que converte Celsius em Fahrenheit
#Lendo a temperatura em Celsius
celsius = float(input("Digite a temperatura em Celsius: "))
#Convertendo para fahrenheit 
fahrenheit = (celcius * 9/5) + 32
#Imprimindo o resuktadi arredondado para 2 casas decimais 
print("Temperatura em Fahrenheit:", round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fahrenheit = (celcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
